--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label for="slide-three">Slide three</label>
             <label for="slide-four">Slide four</label>
         </header>
-        <input type="radio" id="slide-one" name="slides" checked>
+        <input type="radio" id="slide-one" name="slides" checked autofocus>
         <section class="slide slide-one">
             <h1>Kent Park, Antalya</h1>
         </section>
